# metaopenenvhfscalerHACKATHON

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
