[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bug-triage-env"
version = "1.0.0"
description = "SRE Bug Triage Benchmark"
requires-python = ">=3.9"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn[standard]",
    "pydantic"
]

[project.scripts]
server = "server.app:run"
